Correção de bugs dos filtros, do <nav> e <footer> e legibilidade
Corrigido bug em que era possível ver tarefas em dias antes de serem criadas (Se ela fosse criada no dia 15/11, por exemplo, era possível vê-la no dia 10/11, o que não faz sentido). <nav> e <footer> foram adaptados à página e o bug de double scroll foi corrigido. Parte do código de encapsulamento de dados foi modificada para melhorar a legibilidade.

--- a/CSS/AgendaEletronica/agendaEletronica.css
+++ b/CSS/AgendaEletronica/agendaEletronica.css
@@ -80,6 +80,9 @@ textarea::placeholder{
 	font-weight: bold;
 }
 
+nav{
+	z-index: 999;
+}
 .sectionCheck{
 	border-bottom: 1px solid;
 }
